--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -3794,6 +3794,493 @@
     "    \n",
     "    fig.savefig(filename + '.png', dpi=300)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Applying a statistical model to the dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import statsmodels.api as sm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv(\"A2_mosquito_data.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>temperature</th>\n",
+       "      <th>rainfall</th>\n",
+       "      <th>mosquitos</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1960</td>\n",
+       "      <td>82</td>\n",
+       "      <td>200</td>\n",
+       "      <td>180</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1961</td>\n",
+       "      <td>70</td>\n",
+       "      <td>227</td>\n",
+       "      <td>194</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1962</td>\n",
+       "      <td>89</td>\n",
+       "      <td>231</td>\n",
+       "      <td>207</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1963</td>\n",
+       "      <td>74</td>\n",
+       "      <td>114</td>\n",
+       "      <td>121</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1964</td>\n",
+       "      <td>78</td>\n",
+       "      <td>147</td>\n",
+       "      <td>140</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1965</td>\n",
+       "      <td>85</td>\n",
+       "      <td>151</td>\n",
+       "      <td>148</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1966</td>\n",
+       "      <td>86</td>\n",
+       "      <td>172</td>\n",
+       "      <td>162</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1967</td>\n",
+       "      <td>75</td>\n",
+       "      <td>106</td>\n",
+       "      <td>112</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1968</td>\n",
+       "      <td>70</td>\n",
+       "      <td>276</td>\n",
+       "      <td>230</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1969</td>\n",
+       "      <td>86</td>\n",
+       "      <td>165</td>\n",
+       "      <td>162</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>1970</td>\n",
+       "      <td>83</td>\n",
+       "      <td>222</td>\n",
+       "      <td>198</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>1971</td>\n",
+       "      <td>78</td>\n",
+       "      <td>297</td>\n",
+       "      <td>247</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>1972</td>\n",
+       "      <td>87</td>\n",
+       "      <td>288</td>\n",
+       "      <td>248</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>1973</td>\n",
+       "      <td>76</td>\n",
+       "      <td>286</td>\n",
+       "      <td>239</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>1974</td>\n",
+       "      <td>86</td>\n",
+       "      <td>231</td>\n",
+       "      <td>202</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>1975</td>\n",
+       "      <td>90</td>\n",
+       "      <td>284</td>\n",
+       "      <td>243</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>1976</td>\n",
+       "      <td>76</td>\n",
+       "      <td>190</td>\n",
+       "      <td>175</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>1977</td>\n",
+       "      <td>87</td>\n",
+       "      <td>257</td>\n",
+       "      <td>225</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>1978</td>\n",
+       "      <td>88</td>\n",
+       "      <td>128</td>\n",
+       "      <td>133</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>1979</td>\n",
+       "      <td>87</td>\n",
+       "      <td>218</td>\n",
+       "      <td>199</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>1980</td>\n",
+       "      <td>81</td>\n",
+       "      <td>206</td>\n",
+       "      <td>184</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>1981</td>\n",
+       "      <td>74</td>\n",
+       "      <td>175</td>\n",
+       "      <td>160</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>1982</td>\n",
+       "      <td>85</td>\n",
+       "      <td>202</td>\n",
+       "      <td>187</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>1983</td>\n",
+       "      <td>71</td>\n",
+       "      <td>130</td>\n",
+       "      <td>126</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>1984</td>\n",
+       "      <td>80</td>\n",
+       "      <td>225</td>\n",
+       "      <td>200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>1985</td>\n",
+       "      <td>72</td>\n",
+       "      <td>196</td>\n",
+       "      <td>173</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>1986</td>\n",
+       "      <td>76</td>\n",
+       "      <td>261</td>\n",
+       "      <td>222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>1987</td>\n",
+       "      <td>85</td>\n",
+       "      <td>111</td>\n",
+       "      <td>121</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>1988</td>\n",
+       "      <td>83</td>\n",
+       "      <td>247</td>\n",
+       "      <td>210</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>1989</td>\n",
+       "      <td>86</td>\n",
+       "      <td>137</td>\n",
+       "      <td>142</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>1990</td>\n",
+       "      <td>82</td>\n",
+       "      <td>159</td>\n",
+       "      <td>152</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>1991</td>\n",
+       "      <td>77</td>\n",
+       "      <td>172</td>\n",
+       "      <td>160</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>1992</td>\n",
+       "      <td>74</td>\n",
+       "      <td>280</td>\n",
+       "      <td>231</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>1993</td>\n",
+       "      <td>70</td>\n",
+       "      <td>291</td>\n",
+       "      <td>238</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>1994</td>\n",
+       "      <td>77</td>\n",
+       "      <td>126</td>\n",
+       "      <td>125</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>1995</td>\n",
+       "      <td>89</td>\n",
+       "      <td>191</td>\n",
+       "      <td>178</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>1996</td>\n",
+       "      <td>83</td>\n",
+       "      <td>298</td>\n",
+       "      <td>248</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>1997</td>\n",
+       "      <td>80</td>\n",
+       "      <td>282</td>\n",
+       "      <td>237</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>1998</td>\n",
+       "      <td>86</td>\n",
+       "      <td>219</td>\n",
+       "      <td>195</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>1999</td>\n",
+       "      <td>72</td>\n",
+       "      <td>143</td>\n",
+       "      <td>134</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>2000</td>\n",
+       "      <td>79</td>\n",
+       "      <td>262</td>\n",
+       "      <td>221</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>2001</td>\n",
+       "      <td>85</td>\n",
+       "      <td>189</td>\n",
+       "      <td>175</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>2002</td>\n",
+       "      <td>86</td>\n",
+       "      <td>205</td>\n",
+       "      <td>186</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>2003</td>\n",
+       "      <td>72</td>\n",
+       "      <td>195</td>\n",
+       "      <td>173</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>78</td>\n",
+       "      <td>148</td>\n",
+       "      <td>146</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>2005</td>\n",
+       "      <td>71</td>\n",
+       "      <td>262</td>\n",
+       "      <td>219</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>2006</td>\n",
+       "      <td>88</td>\n",
+       "      <td>255</td>\n",
+       "      <td>226</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>2007</td>\n",
+       "      <td>79</td>\n",
+       "      <td>262</td>\n",
+       "      <td>221</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>2008</td>\n",
+       "      <td>73</td>\n",
+       "      <td>198</td>\n",
+       "      <td>176</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>86</td>\n",
+       "      <td>215</td>\n",
+       "      <td>187</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>87</td>\n",
+       "      <td>127</td>\n",
+       "      <td>129</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    year  temperature  rainfall  mosquitos\n",
+       "0   1960           82       200        180\n",
+       "1   1961           70       227        194\n",
+       "2   1962           89       231        207\n",
+       "3   1963           74       114        121\n",
+       "4   1964           78       147        140\n",
+       "5   1965           85       151        148\n",
+       "6   1966           86       172        162\n",
+       "7   1967           75       106        112\n",
+       "8   1968           70       276        230\n",
+       "9   1969           86       165        162\n",
+       "10  1970           83       222        198\n",
+       "11  1971           78       297        247\n",
+       "12  1972           87       288        248\n",
+       "13  1973           76       286        239\n",
+       "14  1974           86       231        202\n",
+       "15  1975           90       284        243\n",
+       "16  1976           76       190        175\n",
+       "17  1977           87       257        225\n",
+       "18  1978           88       128        133\n",
+       "19  1979           87       218        199\n",
+       "20  1980           81       206        184\n",
+       "21  1981           74       175        160\n",
+       "22  1982           85       202        187\n",
+       "23  1983           71       130        126\n",
+       "24  1984           80       225        200\n",
+       "25  1985           72       196        173\n",
+       "26  1986           76       261        222\n",
+       "27  1987           85       111        121\n",
+       "28  1988           83       247        210\n",
+       "29  1989           86       137        142\n",
+       "30  1990           82       159        152\n",
+       "31  1991           77       172        160\n",
+       "32  1992           74       280        231\n",
+       "33  1993           70       291        238\n",
+       "34  1994           77       126        125\n",
+       "35  1995           89       191        178\n",
+       "36  1996           83       298        248\n",
+       "37  1997           80       282        237\n",
+       "38  1998           86       219        195\n",
+       "39  1999           72       143        134\n",
+       "40  2000           79       262        221\n",
+       "41  2001           85       189        175\n",
+       "42  2002           86       205        186\n",
+       "43  2003           72       195        173\n",
+       "44  2004           78       148        146\n",
+       "45  2005           71       262        219\n",
+       "46  2006           88       255        226\n",
+       "47  2007           79       262        221\n",
+       "48  2008           73       198        176\n",
+       "49  2009           86       215        187\n",
+       "50  2010           87       127        129"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
   }
  ],
  "metadata": {
