--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -8028,12 +8028,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 127,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "argv_list.py  errors_01.py  errors_02.py  \u001b[0m\u001b[01;32mplot_rand_mp.py\u001b[0m*\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "%ls scripts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "No module named 'errors_01'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-128-56eb787402eb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0merrors_01\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m: No module named 'errors_01'"
+     ]
+    }
+   ],
+   "source": [
+    "import errors_01"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import sys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['',\n",
+       " '/home/alter/Library/asciitree',\n",
+       " '/home/alter/Library/datreant/datreant.core/src',\n",
+       " '/home/alter/Library/datreant/datreant.data/src',\n",
+       " '/home/alter/Library/datreant/mdsynthesis/src',\n",
+       " '/home/alter/Library/nglview',\n",
+       " '/home/alter/Library/pymbar',\n",
+       " '/home/alter/Library/dask',\n",
+       " '/usr/lib/python35.zip',\n",
+       " '/usr/lib/python3.5',\n",
+       " '/usr/lib/python3.5/plat-linux',\n",
+       " '/usr/lib/python3.5/lib-dynload',\n",
+       " '/home/alter/.local/lib/python3.5/site-packages',\n",
+       " '/usr/lib/python3.5/site-packages',\n",
+       " '/usr/lib/python3.5/site-packages/gtk-2.0',\n",
+       " '/home/alter/.local/lib/python3.5/site-packages/IPython/extensions',\n",
+       " '/home/alter/.ipython']"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sys.path"
+   ]
   }
  ],
  "metadata": {
