--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -8238,7 +8238,17 @@
    "outputs": [],
    "source": [
     "def normalize_rectangle(rect):\n",
-    "    \"\"\"\"\"\""
+    "    \"\"\"Normalizes a rectangle so that it is at the origin,\n",
+    "    and 1.0 units long on its longest axis.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    rect : tuple of size 4\n",
+    "        A tuple of size four, giving (x0, y0, x1, y1), the (x,y)\n",
+    "        positions of the lower-left and upper-right \n",
+    "    \n",
+    "    \n",
+    "    \"\"\""
    ]
   }
  ],
