--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -8231,7 +8231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 136,
    "metadata": {
     "collapsed": true
    },
@@ -8261,7 +8261,35 @@
     "    \n",
     "    if dx > dy:\n",
     "        scaled = dx/dy\n",
-    "        "
+    "        upper_x, upper_y = 1.0, scaled\n",
+    "        \n",
+    "    else:\n",
+    "        scaled = dx/dy\n",
+    "        upper_x, upper_y = scaled, 1.0\n",
+    "        \n",
+    "    return (0, 0, upper_x, upper_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0, 0, 1.0, 1.5)"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "normalize_rectangle((3, 2, 6, 4))"
    ]
   }
  ],
